--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "react-scripts start"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.3",
     "react-scripts": "^5.0.1"
   },
   "browserslist": {
@@ -22,5 +24,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.17"
   }
 }
